# i2ctool

./: CMakeLists.txt  sl_settings.json
src/: main.cpp  sl_config.h
